# pasd

./: .gitignore  Cargo.toml  input.css  tailwind.config.js
migrations/: down.sql  up.sql
src/: asset_handlers.rs  errors.rs  handlers.rs  hypermedia_handlers.rs  main.rs  model.rs  templater.rs
src/handlers/: assets.rs  data.rs  hypermedia.rs
static/css/: output.css
templates/: all_initiatives.html  all_keyresults.html  all_objectives.html  all_projects.html  all_themes.html  error.html  initiative.html  keyresult.html  list_initiatives.html  list_keyresults.html  list_objectives.html  list_projects.html  list_themes.html  objective.html  project.html  root.html  theme.html
templates/form/: edit_initiative.html  edit_keyresult.html  edit_measurement.html  edit_objective.html  edit_project.html  edit_task.html  edit_theme.html
templates/page/: base.html  error.html  initiative.html  keyresult.html  objective.html  project.html  root.html  theme.html
templates/row/: initiative.html  keyresult.html  measurement.html  objective.html  project.html  task.html  theme.html
templates/table/: initiatives.html  keyresults.html  measurements.html  objectives.html  projects.html  tasks.html  themes.html
