[package]
name = "tokip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0", features = ["serde-json"]}
askama_axum = "0.3.0"
axum = { version = "0.6.18", features = ["macros"] }
axum-macros = "0.3.7"
chrono = { version = "0.4.26", features = ["serde"] }
mime = "0.3.17"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.7", features = ["macros", "runtime-tokio", "chrono"] }
sqlx-cli = "0.7.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = {version = "0.1.37", features = ["attributes"] }
tracing-subscriber = "0.3.17"

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"              # Enable serialization/deserialization
]
